--- a/lang/en.json
+++ b/lang/en.json
@@ -1,3 +1,4 @@
 {
-    "DICE.FULFILLMENT.DWMResolver": "Dice With Mice!"
+    "DICE.FULFILLMENT.DWMResolver": "Dice With Mice!",
+    "DICE.DWMResolverRollResolution": "Roll your Dice"
 }
